test/error/LexResourceSyntax2.ci
public static class Test
{
	public static bool Run()
	{
		byte[] a = resource<int[]>("foo"); //ERROR: Expected 'resource<byte[]>' //ERROR: Expected ';', got identifier //ERROR: Invalid expression //ERROR: Expected ';', got '>'
		return true;
	}
}
